# OutlineDetectionAndSwarmDynamics

./: .gitignore  README.md
Edge_Detect_C/: Edge_Detect_C.sln
Edge_Detect_C/Debug/: Edge_Detect_C.ilk
Edge_Detect_C/Edge_Detect_C/: Edge_Detect_C.cpp  Edge_Detect_C.vcxproj  Edge_Detect_C.vcxproj.filters
MCMC/: .LinearMetroAlg.h.swp  .ParallelMetroAlg.cpp.swp  LinearMetroAlg.cpp  LinearMetroAlg.h  ParallelMetroAlg.cpp  SwarmStrategy.cpp  SwarmStrategy.h  a.out  main.cpp
MCMC/multithreading/: .multi-mcmc.cpp.swp  multi-mcmc.cpp
MCMC/swarm_interface/: SwarmStrategy.cpp  SwarmStrategy.h
MCMC/trash/: SwarmStrategy.cpp  SwarmStrategy.h.gch
SS_pycharm/: main.py
SS_pycharm/JavaSource/: StepParticles.java
Swarm_Mechanics/: swarm_sims.ipynb
docker/: BeeHandle.cpp  BeeHandle.hpp  BeeHandle_simple.hpp  Dockerfile  Swarm.h  bug_library.md  build_run.sh  main  main.cpp  makefile
gesture_detection/: data_training.py  gesture_capture.py  real_time_gestrue.py
src/: .gitignore  .main.cpp.swp  AudioHandler.hpp  BeeHandle.cpp  BeeHandle.h  BeeHandleSimple.hpp  CMakeLists.txt  QRGenerator.cpp  generateQR.js  main  main.cpp  main.cpp.save  makefile  package-lock.json  package.json  utils.cpp  utils.h
src/graphics/: QR.vertexshader  generateQR.py  graphics_module.cpp  graphics_module.hpp  main  main.cpp  makefile  token.pickle  url.txt
src/graphics/common/: texture.cpp
src/pbfiles/: gesture_map.txt  output_graph.pb
src/time_reports/: time_report.txt
swarm_python/: Swarm.py  Swarm_3-2.py  Swarm_3.py  Swarm_improved.py
testing_and_evaluation/: timing_plot.py
(+118 files in other folders)
